// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.nbs.node.utils.cmdKits.pb";
option java_outer_classname = "RpcAddMessage";

package pb;

enum FileType {
    FILE        = 0;
    LARGEFILE   = 1;
    DIRECTORY   = 2;
    SYSTEMLINK  = 3;
}

service AddTask {

    rpc AddFile (AddRequest) returns (AddResponse) {}

    rpc TransLargeFile(stream Content) returns (AddResponse) {}
}

message Content{
    bytes   content = 1;
}

message AddRequest{
    string      fileName    = 1;
    string      fullPath    = 2;
    int64       fileSize    = 3;
    FileType    fileType    = 4;
    bytes       fileData    = 5;
}

message AddResponse {
    string message      = 1;
    string sessionId    = 2;
    int64  dataReceive  = 3;
}